@startuml Class_Diagram_Midas_API

package "Entity Layer" {
    class Account {
        - id: Long
        - nome: String
        - saldo: BigDecimal
        - transactions: List<Transaction>
        + getId(): Long
        + setId(id: Long): void
        + getNome(): String
        + setNome(nome: String): void
        + getSaldo(): BigDecimal
        + setSaldo(saldo: BigDecimal): void
        + getTransactions(): List<Transaction>
        + setTransactions(transactions: List<Transaction>): void
    }

    class Transaction {
        - id: Long
        - valor: BigDecimal
        - data: LocalDateTime
        - tipo: TransactionType
        - descricao: String
        - account: Account
        + getId(): Long
        + setId(id: Long): void
        + getValor(): BigDecimal
        + setValor(valor: BigDecimal): void
        + getData(): LocalDateTime
        + setData(data: LocalDateTime): void
        + getTipo(): TransactionType
        + setTipo(tipo: TransactionType): void
        + getDescricao(): String
        + setDescricao(descricao: String): void
        + getAccount(): Account
        + setAccount(account: Account): void
    }

    enum TransactionType {
        RECEITA
        DESPESA
    }
}

package "Repository Layer" {
    interface JpaRepository<T, ID> {
        + save(entity: T): T
        + findById(id: ID): Optional<T>
        + findAll(): List<T>
        + deleteById(id: ID): void
    }

    interface AccountRepository {
        + findByNome(nome: String): Optional<Account>
    }

    interface TransactionRepository {
        + findByAccountId(accountId: Long): List<Transaction>
        + findByAccountIdAndDataBetween(accountId: Long, startDate: LocalDateTime, endDate: LocalDateTime): List<Transaction>
        + findByAccount(account: Account, pageable: Pageable): Page<Transaction>
    }
}

package "Service Layer" {
    interface AccountService {
        + save(account: Account): Account
        + findById(id: Long): Optional<Account>
        + findAll(): List<Account>
        + update(id: Long, account: Account): Account
        + deleteById(id: Long): void
        + findByNome(nome: String): Optional<Account>
    }

    class AccountServiceImpl {
        - accountRepository: AccountRepository
        + save(account: Account): Account
        + findById(id: Long): Optional<Account>
        + findAll(): List<Account>
        + update(id: Long, account: Account): Account
        + deleteById(id: Long): void
        + findByNome(nome: String): Optional<Account>
    }

    interface TransactionService {
        + save(transaction: Transaction): Transaction
        + findById(id: Long): Optional<Transaction>
        + findAll(): List<Transaction>
        + update(id: Long, transaction: Transaction): Transaction
        + deleteById(id: Long): void
        + findByAccountId(accountId: Long): List<Transaction>
        + findByAccountIdAndPeriod(accountId: Long, startDate: LocalDateTime, endDate: LocalDateTime): List<Transaction>
        + findByAccountId(accountId: Long, pageable: Pageable): Page<Transaction>
    }

    class TransactionServiceImpl {
        - transactionRepository: TransactionRepository
        - accountRepository: AccountRepository
        + save(transaction: Transaction): Transaction
        + findById(id: Long): Optional<Transaction>
        + findAll(): List<Transaction>
        + update(id: Long, transaction: Transaction): Transaction
        + deleteById(id: Long): void
        + findByAccountId(accountId: Long): List<Transaction>
        + findByAccountIdAndPeriod(accountId: Long, startDate: LocalDateTime, endDate: LocalDateTime): List<Transaction>
        + findByAccountId(accountId: Long, pageable: Pageable): Page<Transaction>
    }
}

package "Controller Layer" {
    class AccountController {
        - accountService: AccountService
        + createAccount(requestDto: AccountRequestDto): ResponseEntity
        + getAllAccounts(): ResponseEntity
        + getAccountById(id: Long): ResponseEntity
        + updateAccount(id: Long, requestDto: AccountRequestDto): ResponseEntity
        + deleteAccount(id: Long): ResponseEntity
    }

    class TransactionController {
        - transactionService: TransactionService
        - accountService: AccountService
        + createTransaction(requestDto: TransactionRequestDto): ResponseEntity
        + getAllTransactions(): ResponseEntity
        + getTransactionById(id: Long): ResponseEntity
        + getTransactionsByAccountId(accountId: Long): ResponseEntity
        + updateTransaction(id: Long, requestDto: TransactionRequestDto): ResponseEntity
        + deleteTransaction(id: Long): ResponseEntity
    }
}

' Relationships
Account "1" ||--o{ "N" Transaction : "possui"
Transaction --> TransactionType : "usa"

JpaRepository <|-- AccountRepository : "extends"
JpaRepository <|-- TransactionRepository : "extends"

AccountService <|.. AccountServiceImpl : "implements"
TransactionService <|.. TransactionServiceImpl : "implements"

AccountServiceImpl --> AccountRepository : "usa"
TransactionServiceImpl --> TransactionRepository : "usa"
TransactionServiceImpl --> AccountRepository : "usa"

AccountController --> AccountService : "usa"
TransactionController --> TransactionService : "usa"
TransactionController --> AccountService : "usa"

note right of TransactionServiceImpl
  Atualiza o saldo da conta
  automaticamente ao criar/atualizar
  transações (RECEITA/DESPESA)
end note

note right of AccountRepository
  Estende JpaRepository do Spring Data JPA
  Herda todos os métodos CRUD padrão
end note

note right of TransactionRepository
  Estende JpaRepository do Spring Data JPA
  Queries customizadas para buscar por conta
end note

@enduml
